# Vulnhalla

./: .env.example  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
data/queries/cpp/issues/: Copy function using source size.qlx_tmp  NonConstantFormat.ql  OverflowBuffer.ql_tmp
data/templates/cpp/: NonConstantFormat-copy.template  NonConstantFormat.template  OverflowBuffer.template  general.template
data/templates/php/: code_injection.template  general.template  path_traversal.template  security_misconfiguration.template  sql_injection.template  template.template  xss.template
examples/: example.py
src/: pipeline.py  vulnhalla.py  vulnhalla_setup.py
src/codeql/: db_lookup.py  fetch_repos.py  run_codeql_queries.py
src/llm/: llm_analyzer.py
src/php/: __init__.py  php_db_lookup.py  php_issue_analyzer.py  plugin_downloader.py  progpilot_adapter.py  verdict_exporter.py
src/ui/: models.py  results_loader.py  ui_app.py
src/ui/components/: details_panel.py
src/utils/: common_functions.py  config.py  config_validator.py  csv_parser.py  llm_config.py  logger.py
