[tool.poetry]
name = "vulnhalla"
version = "0.1.0"
description = "Automated CodeQL Analysis with LLM Classification"
readme = "README.md"
license = "Apache-2.0"
authors = ["CyberArk Software Ltd. <info@cyberark.com>"]
repository = "https://github.com/cyberark/Vulnhalla"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
# Python version constraint: >=3.10,<3.14
# - Minimum 3.10
# - Maximum <3.14: Not supported due to grpcio wheels unavailable

requests = "^2.31.0"
python-dotenv = "^1.0.0"
litellm = "^1.0.0"
PyYAML = "^6.0"
textual = "^0.40.0"
pySmartDL = "^1.3.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
vulnhalla-setup = "src.vulnhalla_setup:main"
vulnhalla = "src.pipeline:main_analyze"
vulnhalla-ui = "src.pipeline:main_ui"
vulnhalla-validate = "src.pipeline:main_validate"
vulnhalla-list = "src.pipeline:main_list"
vulnhalla-example = "src.pipeline:main_example"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
